tests/sumo/output/e2/errors/id_empty/errors.sumo
Error: Attribute 'id' in definition of a e2Detector is empty.
Quitting (on error).
